...
  // To send Image Messages
  var imageUri by remember { mutableStateOf<Uri?>(null) }
  var imageBitmap by remember { mutableStateOf<Bitmap?>(null) }
  val localContext = LocalContext.current

  Scaffold(
      modifier = Modifier.testTag("ChatScreen"),
      topBar = {
        ChatHeader(
            name = receiverName, picture = receiverPicture, navigationActions = navigationActions)
      },
      bottomBar = {
        MessageInputBar(
...
                  value = message,
                  onValueChange = { message = it },
                  modifier =
                      Modifier.weight(1f)
                          .heightIn(min = 56.dp) // Matches the height of buttons for alignment
                          .padding(end = 8.dp)
                          .testTag("enterText"),
                  placeholder = {
                    Text(
                        text = "Send Message",
                        color = colorScheme.onSurfaceVariant,
                        style = Typography.bodyLarge)
                  },
...
                              "Your messages will be sent when you are back online",
                              Toast.LENGTH_SHORT)
                          .show()
                    }
                    onSendClickButton(message) { message = it }
                  },
                  modifier = Modifier.size(48.dp).testTag("sendMessageButton")) {
                    Icon(
                        imageVector = Icons.AutoMirrored.Filled.Send,
                        contentDescription = "Send",
                        tint = colorScheme.onSurfaceVariant,
                        modifier = Modifier.rotate(-45f))
                  }
...
