...
      activity?.requestedOrientation = ActivityInfo.SCREEN_ORIENTATION_UNSPECIFIED
      requestViewModel.clearFilters()
    }
  }

  Scaffold(
      modifier = Modifier.testTag("requestsOverviewScreen"),
      bottomBar = {
        val currentRoute = navigationActions.currentRoute()
        BottomNavigationMenu(
            onTabSelect = { navigationActions.navigateTo(it) },
            tabList = LIST_TOP_LEVEL_DESTINATION_SEEKER,
            selectedItem = currentRoute)
...
  Box(
      modifier =
          Modifier.fillMaxWidth()
              .clickable { onClick() }
              .border(1.dp, colorScheme.onSurfaceVariant, RoundedCornerShape(16.dp))
              .padding(horizontal = 16.dp, vertical = 12.dp)
              .testTag("requestListItem")) {
        Column {
          Row(horizontalArrangement = Arrangement.spacedBy(16.dp)) {
            val image = request.imageUrl
            AsyncImage(
                model = if (!image.isNullOrEmpty()) image else R.drawable.no_photo,
                placeholder = painterResource(id = R.drawable.loading),
...
