...
  val isCompleted = request!!.status == ServiceRequestStatus.COMPLETED
  val acceptedOrScheduled = isAccepted || isScheduled
  val pendingOrAcceptedOrScheduled = isPending || acceptedOrScheduled

  // Scaffold provides the basic structure for the screen with a top bar and content
  Scaffold(
      modifier = Modifier.testTag("service_booking_screen"),
      topBar = {
        // TopAppBar displays the navigation icon and title of the screen
        TopAppBar(
            colors =
                TopAppBarColors(
                    containerColor = colorScheme.background,
...
    receiverId: String,
    receiver: Any,
    requestId: String,
    modifier: Modifier = Modifier
) {
  Box(
      modifier = modifier.fillMaxWidth().padding(top = 8.dp).testTag("chat_button"),
      contentAlignment = Alignment.Center) {
        Button(
            modifier = Modifier.fillMaxWidth().height(50.dp),
            onClick = {
              chatViewModel.prepareForChat(false, currentUserId, receiverId, receiver, requestId)
            },
...
